# somewhat-homomorphic-encryption-system

./: README.md
SHE_Client/: CMakeLists.txt  README.md
SHE_Client/src/: data0.h  main_interface.cpp
SHE_Client/src/homoenc/hardware/: data.hpp
SHE_Client/src/network/: socket_client.cpp
SHE_Client/src/util/: parameters.hpp
SHE_OpenFHE/: CMakeLists.txt  README.md  build.sh
SHE_OpenFHE/src/: main_interface.cpp
SHE_OpenFHE/src/util/: parameters.hpp
SHE_SEAL/: CMakeLists.txt  README.md  build.sh
SHE_SEAL/src/: main_interface.cpp
SHE_SEAL/src/homoenc/: packer.cpp  seal_interface.cpp
SHE_SEAL/src/homoenc/hardware/: data.hpp
SHE_SEAL_Client/: README.md  build.sh
SHE_SEAL_Client/src/: constants.h  main_interface.cpp
SHE_SEAL_Client/src/homoenc/: packer.cpp  seal_interface.cpp
SHE_SEAL_Client/src/network/: network_parameter.hpp  socket_client.cpp
SHE_SEAL_Client/src/tests/: packer_test.cpp
SHE_Server/: README.md  system.mss
SHE_Server/project_sw/app0_bsp/: .cproject  .project  .sdkproject  system.mss
SHE_Server/project_sw/app0_design/: .cproject  .project
SHE_Server/project_sw/app0_design/Debug/: app0_design.elf  app0_design.elf.size  makefile
SHE_Server/project_sw/app1_bsp/: .cproject  .project  .sdkproject  system.mss
SHE_Server/project_sw/app1_design/: .cproject  .project
SHE_Server/project_sw/hw_platform/: .project  psu_init.c  psu_init.h  psu_init.html  psu_init.tcl  psu_init_gpl.c  psu_init_gpl.h
SHE_Server/project_sw/ntw_bsp/: .cproject  .project
SHE_Server/project_sw/ntw_design/: .cproject  .project
(+63 files in other folders)
